k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: project-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          # image: sangy2108/project-mgmt-app-client:1.0
          # image: sangy2108/project-mgmt-app-client:1.1
          # image: sangy2108/project-mgmt-app-client:1.2
          image: sangy2108/project-mgmt-app-client:1.3
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: project-mgmt
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30007 # Optional: specify a nodePort in the range 30000-32767, or leave it out for Kubernetes to assign one automatically
  # type: ClusterIP
  # If you are using nodePort then type = nodeport
  type: NodePort
