k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: project-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: sangy2108/project-mgmt-app-server:1.0
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: project-mgmt
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30008 # Optional: specify a nodePort in the range 30000-32767, or leave it out for Kubernetes to assign one automatically
  type: NodePort
# http://172.20.48.65:30008
