k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: project-mgmt
spec:
  tls:
    - hosts:
        - my-app.com
      secretName: my-app-tls
  rules:
    - host: my-app.com
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
